# tricity-apartment-predictor

./: .gitignore  README.md  analysis.py  app.py  clean_trojmiasto.py  model_trojmiasto.pkl  model_trojmiasto.py  pyproject.toml  report.md  requirements.txt  scraper.py
.github/workflows/: daily_scraper.yml
data/: mieszkania_trojmiasto.csv  mieszkania_trojmiasto_clean.csv
